backend hashed password

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://saminazirqureshi1:qureshi*1@cluster0.yjdqglt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-# MONGODB_URI ye nam big spelling mai likhna hai 
+/XDYRTnXBB8p4kHvb
+MONGODB_URI=mongodb+srv://saminazirqureshi1:XDYRTnXBB8p4kHvb@cluster0.26qnvsh.mongodb.net/
